; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_audio_quality_get_best.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_audio_quality_get_best.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @hb_audio_quality_get_best(i32 %0, float %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca float, align 4
  %5 = alloca i32, align 4
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  store i32 %0, i32* %3, align 4
  store float %1, float* %4, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @hb_audio_quality_get_limits(i32 %9, float* %6, float* %7, float* %8, i32* %5)
  %11 = load float, float* %4, align 4
  %12 = load float, float* %7, align 4
  %13 = fcmp ogt float %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load float, float* %7, align 4
  store float %15, float* %4, align 4
  br label %16

16:                                               ; preds = %14, %2
  %17 = load float, float* %4, align 4
  %18 = load float, float* %6, align 4
  %19 = fcmp olt float %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %16
  %21 = load float, float* %6, align 4
  store float %21, float* %4, align 4
  br label %22

22:                                               ; preds = %20, %16
  %23 = load float, float* %4, align 4
  ret float %23
}

declare dso_local i32 @hb_audio_quality_get_limits(i32, float*, float*, float*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
